Fix task http retry err, impl progress when content-length present

--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "task",
   "module": "index.ts",
-  "type": "module",
-  "private": true,
-  "devDependencies": {
-    "@types/bun": "latest"
+  "dependencies": {
+    "@sigma/rust-base64": "npm:@jsr/sigma__rust-base64"
   },
   "peerDependencies": {
     "typescript": "^5"
   },
-  "dependencies": {
-    "@sigma/rust-base64": "npm:@jsr/sigma__rust-base64"
+  "private": true,
+  "type": "module",
+  "devDependencies": {
+    "tsx": "^4.20.5"
   }
 }
