--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "task",
   "module": "index.ts",
-  "script": {
-    "repl": "tsx"
+  "scripts": {
+    "repl": "tsx",
+    "test": "bun run --bun tape src/**/*.spec.ts"
   },
   "dependencies": {
     "@sigma/rust-base64": "npm:@jsr/sigma__rust-base64"
@@ -13,6 +14,9 @@
   "private": true,
   "type": "module",
   "devDependencies": {
+    "@biomejs/biome": "2.2.2",
+    "@types/tape": "^5.8.1",
+    "tape": "^5.9.0",
     "tsx": "^4.20.5"
   }
 }
