--- a/package.json
+++ b/package.json
@@ -30,6 +30,12 @@
     "typescript": "^5"
   },
   "dependencies": {
-    "@types/bun": "^1.2.21"
+    "@types/bun": "^1.2.21",
+    "semantic-release": "^24.2.7",
+    "@semantic-release/commit-analyzer": "^13.0.0",
+    "@semantic-release/release-notes-generator": "^14.0.1",
+    "@semantic-release/exec": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^11.0.0"
   }
 }
