--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@semantic-release/release-notes-generator": "^14.0.1",
     "@semantic-release/exec": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
-    "@semantic-release/github": "^11.0.0"
+    "@semantic-release/github": "^11.0.0",
+    "conventional-changelog-conventionalcommits": "^8.0.0"
   }
 }
