--- a/package.json
+++ b/package.json
@@ -24,13 +24,7 @@
   },
   "type": "module",
   "devDependencies": {
-    "tsx": "^4.20.5"
-  },
-  "peerDependencies": {
-    "typescript": "^5"
-  },
-  "dependencies": {
-    "@types/bun": "^1.2.21",
+    "tsx": "^4.20.5",
     "semantic-release": "^24.2.7",
     "@semantic-release/commit-analyzer": "^13.0.0",
     "@semantic-release/release-notes-generator": "^14.0.1",
@@ -38,5 +32,11 @@
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^11.0.0",
     "conventional-changelog-conventionalcommits": "^8.0.0"
+  },
+  "peerDependencies": {
+    "typescript": "^5"
+  },
+  "dependencies": {
+    "@types/bun": "^1.2.21"
   }
 }
