--- a/.releaserc.json
+++ b/.releaserc.json
@@ -51,7 +51,7 @@
     [
       "@semantic-release/git",
       {
-        "assets": ["jsr.json"],
+        "assets": ["jsr.json", "bun.lock"],
         "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
       }
     ],
