--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,8 +26,8 @@ jobs:
         with:
           bun-version: latest
 
-      - name: Install dependencies
-        run: bun install
+        - name: Install dependencies
+          run: bun install --frozen-lockfile
 
       - name: Run tests
         run: bun test
